css/style.css
/* ... */
.table_actions a, .table_actions button {
    float: right;
    margin-left: 10px;
}

.table_actions button.filter {
  margin-left: 0;
}

.table_header .table_actions {
  min-width: 0;
}

.table_header .table_actions a, .table_header .table_actions button {
  display: inline-block;
  float: none;
}

/* Style for Actions dropdown*/

.table_header .table_actions .btn-group {
  display: inline-block;
  float: none;
}

.table_header .table_actions .btn-group .dropdown-toggle{
  height: 18px;
  margin-left: -4px;  
}

.table_actions form {
    float: right;
    margin-left: 10px;
}

.hidden {
  display: none;
}

.table-striped tbody tr.status_unknown:nth-child(odd) td {
  background-color: #ffffb5;
}

.table-striped tbody tr.status_unknown:nth-child(even) td {
  background-color: #ffffc6;
}

.icon-updating.ajax-updating {
  background: transparent url(../images/spinner.gif) no-repeat center center;
  padding: 1px;
}

td .icon-updating.ajax-updating {
  margin-right: 5px;
}

.overview {
    font-size: 24px;
}

#monitoring {
  background: #f8f8f8;
  font-size: 14px;
  height: 20px;
  margin: -18px 0 25px;
  padding: 10px;
  border: 1px solid #e1e1e1;
  font-family: "anivers";
}

#monitoring h3{
    font-size: 14px;
    font-weight: normal;
    float: left;
    line-height: 18px;
}

#external_links, #external_links li {
    float: left;
}
#external_links li { margin: 0 0 0 15px; }

/* Forms */

.modal label {
    text-align: left;
    color: #555;
    font-weight: bold;
}

.modal {
    left: none;
    max-height: none; /* Prevents large modals from scrolling unnecessarily */
    top: 80px;
    margin-top: 0;
    position: absolute;
    width: 800px;
    margin-left: -400px;
}

.modal form.horizontal .form-field {
    float: left;
  }

.modal form.horizontal.split_half .form-field {
    width: 385px; /* Fits 2 fields to a row */
}

.modal form.horizontal.split_quarter .form-field {
    width: 167px; /* Fits 4 fields to a row */
}

.modal form.horizontal fieldset {
    width: 100%;
}

.modal table {
  margin-bottom: 30px;
}

.modal-body ~ hr {
  margin-bottom: 0;
}

.modal.static_page {
  position: relative;
  left: 280px;
  top: 10px;
  float: left;
}

.modal .left {
    float: left;
    width: 347px;
    margin-right: 15px;
}

.left form {
  margin: 0;
}

.modal .right-auto {
    float: left;
    width: 400px;
}

.modal .right {
    float: left;
    width: 308px;
}

.modal fieldset {
    margin: 0;
    padding: 0;
    width: 96%;
}

/*.modal .form-field,
.modal fieldset ul {
    width: 90%;
}*/


.modal fieldset .form-field input,
.modal fieldset .form-field select,
.modal fieldset .form-field textarea {
  width: 96%;
}
.modal fieldset .form-field .input .btn-eye,
.modal fieldset .form-field .input .btn-eye-active {
	margin-bottom: 10px;
  cursor: pointer;
} 

.modal fieldset .form-field #password {
	position: relative;
}

.modal fieldset .form-field a {
	position: absolute;
	top: 8px;
	right: 7px;
}

.modal .modal-footer input {
    width: auto;
}

/*.modal .modal-body .modal-footer {
    width: 670px;
    margin-left: -25px;
    margin-right: -15px;
}

/* Modal footer for EditRules in nova/access_and_security */
.modal .modal-body .modal-footer .modal-footer-modefied {
	width: auto;
}

.modal-footer a.close {
  margin-top: 0;
    margin-right: 5px;
    font-size: 12px;
    color: #666;
    font-weight: normal;
  filter: alpha(opacity=100);
  -khtml-opacity: 1;
  -moz-opacity: 1;
  opacity: 1;
}

.modal-footer a.close:hover {
    color: #333;
    text-decoration: underline;
}

.modal .help-block {
    text-align: left;
    float: left;
    width: 100%;
    margin-bottom: 10px;
}

#create_keypair_modal .clearfix {
  margin-bottom: 115px;
}

#actions {
    width: 90px;
}
#actions .btn {
    margin-bottom: 5px;
}
#actions a.btn {
    width: 70px;
}

#actions input.btn {
    text-align: left;
}

#images #actions {
    width: 100px;
}

/*New List Patches*/
.details-modal .modal-body {
  padding-bottom: 20px;
}

.form-inline {
  display: inline;
}

td.select {
  width: 10px;
}

/* Actions dropdown */

td.actions_column {
  width: 170px;
  padding: 10px;
  position: relative;
  min-height: 20px;
}

td.actions_column .row_actions a,
td.actions_column .row_actions input,
td.actions_column .row_actions button,
.table_header .table_actions .btn-group .dropdown-menu button {
  background: none;
  float: none;
  display: block;
  padding: 5px 10px;
  color: black;
  text-align: left;
  border-radius: 0;
  border: 0 none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

td.actions_column .row_actions .hide {
  display: none;
}

/* Makes size consistent across browsers when mixing "btn-group" and "small" */
.btn.hide, .btn-group .hide {
  display: none;
}
.btn-group .dropdown-toggle:focus {
  outline: none;
}
.dropdown-menu button {
  line-height: 18px; /* Matches rule for ".dropdown-menu a" in bootstrap */
  width: 100%;
}
.btn-group .dropdown-menu .btn {
  border-radius: 0;
}
.dropdown-menu .btn.btn-danger,
.dropdown-menu .btn.btn-danger:hover,
.dropdown-menu .btn.btn-success,
.dropdown-menu .btn.btn-success:hover,
.dropdown-menu .btn.btn-info,
.dropdown-menu .btn.btn-info:hover {
  text-shadow: none; /* remove default bootstrap shadowing from button text. */
}
.dropdown-menu li:hover {
  background: none;
}
.dropdown-menu li.divider:hover {
  background-color: #E5E5E5;
}
td.actions_column .dropdown-menu a:hover,
td.actions_column .dropdown-menu button:hover {
  background-color: #CDCDCD;
}

/*first line should be deleted*/
#dropdown_users .dropdown-menu .btn-danger,
.dropdown-menu .btn.btn-danger {
  color: #C43C35;
}
.dropdown-menu .btn.btn-danger:hover {
  background-color: #f6e0df;
}


/* Overrides for single-action rows (no dropdown) */

tr td.actions_column ul.row_actions.single,
tr:hover td.actions_column ul.row_actions.single,
td.actions_column ul.row_actions.single,
td.actions_column ul.row_actions.single:hover {
  border: none;
}
/* ... */

